--- a/dlnd_tv_script_generation.ipynb
+++ b/dlnd_tv_script_generation.ipynb
@@ -466,19 +466,19 @@
      "output_type": "stream",
      "text": [
       "torch.Size([10, 5])\n",
-      "tensor([[ 5.,  6.,  7.,  8.,  9.],\n",
+      "tensor([[25., 26., 27., 28., 29.],\n",
       "        [45., 46., 47., 48., 49.],\n",
-      "        [30., 31., 32., 33., 34.],\n",
       "        [10., 11., 12., 13., 14.],\n",
-      "        [25., 26., 27., 28., 29.],\n",
       "        [ 0.,  1.,  2.,  3.,  4.],\n",
       "        [35., 36., 37., 38., 39.],\n",
+      "        [ 5.,  6.,  7.,  8.,  9.],\n",
+      "        [30., 31., 32., 33., 34.],\n",
+      "        [20., 21., 22., 23., 24.],\n",
       "        [40., 41., 42., 43., 44.],\n",
-      "        [15., 16., 17., 18., 19.],\n",
-      "        [20., 21., 22., 23., 24.]])\n",
+      "        [15., 16., 17., 18., 19.]])\n",
       "\n",
       "torch.Size([10])\n",
-      "tensor([10.,  0., 35., 15., 30.,  5., 40., 45., 20., 25.])\n"
+      "tensor([30.,  0., 15.,  5., 40., 10., 35., 25., 45., 20.])\n"
      ]
     }
    ],
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -682,7 +682,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -821,14 +821,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Data params\n",
     "# Sequence Length\n",
     "# CITATION: Reduced the size of seq len - after reviewing help section on Udacity when my model would not train\n",
-    "sequence_length = 20  # of words in a sequence\n",
+    "sequence_length = 15  # of words in a sequence\n",
     "# Batch Size\n",
     "batch_size = 128\n",
     "\n",
@@ -838,7 +838,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -854,7 +854,7 @@
     "# Output size\n",
     "output_size = len(vocab_to_int)\n",
     "# Embedding Dimension\n",
-    "embedding_dim = 256\n",
+    "embedding_dim = 512\n",
     "# Hidden Dimension\n",
     "hidden_dim = 512\n",
     "# Number of RNN Layers\n",
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -885,125 +885,185 @@
      "output_type": "stream",
      "text": [
       "Training for 10 epoch(s)...\n",
-      "Epoch:    1/10    Loss: 7.188178062438965\n",
+      "Epoch:    1/10    Loss: 7.144121551513672\n",
       "\n",
-      "Epoch:    1/10    Loss: 5.909216251373291\n",
+      "Epoch:    1/10    Loss: 5.856510400772095\n",
       "\n",
-      "Epoch:    1/10    Loss: 5.507108736038208\n",
+      "Epoch:    1/10    Loss: 5.514899435043335\n",
       "\n",
-      "Epoch:    1/10    Loss: 5.3259633350372315\n",
+      "Epoch:    1/10    Loss: 5.319598197937012\n",
       "\n",
-      "Epoch:    1/10    Loss: 5.192136249542236\n",
+      "Epoch:    1/10    Loss: 5.085148839950562\n",
       "\n",
-      "Epoch:    1/10    Loss: 5.108971014022827\n",
+      "Epoch:    1/10    Loss: 5.034412660598755\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.917624303272793\n",
+      "Epoch:    1/10    Loss: 4.939122877120972\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.612884869575501\n",
+      "Epoch:    1/10    Loss: 4.959287672042847\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.674136991500855\n",
+      "Epoch:    1/10    Loss: 4.926618566513062\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.644362297058105\n",
+      "Epoch:    2/10    Loss: 4.591217495501041\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.680334076881409\n",
+      "Epoch:    2/10    Loss: 4.588690013885498\n",
       "\n",
-      "Epoch:    2/10    Loss: 4.691231908798218\n",
+      "Epoch:    2/10    Loss: 4.429323377609253\n",
       "\n",
-      "Epoch:    3/10    Loss: 4.474616590811282\n",
+      "Epoch:    2/10    Loss: 4.541704630851745\n",
       "\n",
-      "Epoch:    3/10    Loss: 4.275048017501831\n",
+      "Epoch:    2/10    Loss: 4.482372994422913\n",
       "\n",
-      "Epoch:    3/10    Loss: 4.32224543094635\n",
+      "Epoch:    2/10    Loss: 4.535603981018067\n",
       "\n",
-      "Epoch:    3/10    Loss: 4.291780939102173\n",
+      "Epoch:    2/10    Loss: 4.516433215141296\n",
       "\n",
-      "Epoch:    3/10    Loss: 4.336889529228211\n",
+      "Epoch:    2/10    Loss: 4.501659383773804\n",
       "\n",
-      "Epoch:    3/10    Loss: 4.239920601844788\n",
+      "Epoch:    2/10    Loss: 4.463464431762695\n",
       "\n",
-      "Epoch:    4/10    Loss: 4.170048100607736\n",
+      "Epoch:    3/10    Loss: 4.206133026629686\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.985440549850464\n",
+      "Epoch:    3/10    Loss: 4.0925143575668335\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.958209795951843\n",
+      "Epoch:    3/10    Loss: 4.135861959457397\n",
       "\n",
-      "Epoch:    4/10    Loss: 4.088303937911987\n",
+      "Epoch:    3/10    Loss: 4.174858894348144\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.929410581588745\n",
+      "Epoch:    3/10    Loss: 4.181919660568237\n",
       "\n",
-      "Epoch:    4/10    Loss: 3.993614115715027\n",
+      "Epoch:    3/10    Loss: 4.113828983306885\n",
       "\n",
-      "Epoch:    5/10    Loss: 3.751463165088576\n",
+      "Epoch:    3/10    Loss: 4.066926193237305\n",
       "\n",
-      "Epoch:    5/10    Loss: 3.551644902229309\n",
+      "Epoch:    3/10    Loss: 4.140707449913025\n",
       "\n",
-      "Epoch:    5/10    Loss: 3.5898634719848634\n",
+      "Epoch:    3/10    Loss: 4.20371072769165\n",
       "\n",
-      "Epoch:    5/10    Loss: 3.6712918090820312\n",
+      "Epoch:    4/10    Loss: 3.710181701928377\n",
       "\n",
-      "Epoch:    5/10    Loss: 3.72596773147583\n",
+      "Epoch:    4/10    Loss: 3.6814649391174314\n",
       "\n",
-      "Epoch:    5/10    Loss: 3.7325481605529784\n",
+      "Epoch:    4/10    Loss: 3.722683086395264\n",
       "\n",
-      "Epoch:    6/10    Loss: 3.350196432094185\n",
+      "Epoch:    4/10    Loss: 3.7433975315093995\n",
       "\n",
-      "Epoch:    6/10    Loss: 3.134623532295227\n",
+      "Epoch:    4/10    Loss: 3.7617189931869506\n",
       "\n",
-      "Epoch:    6/10    Loss: 3.164032373428345\n",
+      "Epoch:    4/10    Loss: 3.7928748083114625\n",
       "\n",
-      "Epoch:    6/10    Loss: 3.287699284553528\n",
+      "Epoch:    4/10    Loss: 3.9450411939620973\n",
       "\n",
-      "Epoch:    6/10    Loss: 3.2911959743499755\n",
+      "Epoch:    4/10    Loss: 3.874917435646057\n",
       "\n",
-      "Epoch:    6/10    Loss: 3.262145981788635\n",
+      "Epoch:    4/10    Loss: 3.805139784812927\n",
       "\n",
-      "Epoch:    7/10    Loss: 2.9654895894381466\n",
+      "Epoch:    5/10    Loss: 3.346682857722044\n",
       "\n",
-      "Epoch:    7/10    Loss: 2.6608947944641113\n",
+      "Epoch:    5/10    Loss: 3.292475709915161\n",
       "\n",
-      "Epoch:    7/10    Loss: 2.7848590183258057\n",
+      "Epoch:    5/10    Loss: 3.3646695613861084\n",
       "\n",
-      "Epoch:    7/10    Loss: 2.830174946784973\n",
+      "Epoch:    5/10    Loss: 3.3434612226486204\n",
       "\n",
-      "Epoch:    7/10    Loss: 2.856190791130066\n",
+      "Epoch:    5/10    Loss: 3.398439259529114\n",
       "\n",
-      "Epoch:    7/10    Loss: 2.8638491559028627\n",
+      "Epoch:    5/10    Loss: 3.3952297019958495\n",
       "\n",
-      "Epoch:    8/10    Loss: 2.5387952534519895\n",
+      "Epoch:    5/10    Loss: 3.445627727508545\n",
       "\n",
-      "Epoch:    8/10    Loss: 2.1752580904960634\n",
+      "Epoch:    5/10    Loss: 3.52839159488678\n",
       "\n",
-      "Epoch:    8/10    Loss: 2.330361747741699\n",
+      "Epoch:    5/10    Loss: 3.5235177421569825\n",
       "\n",
-      "Epoch:    8/10    Loss: 2.4132108879089356\n",
+      "Epoch:    6/10    Loss: 3.006381120532751\n",
       "\n",
-      "Epoch:    8/10    Loss: 2.372188732624054\n",
+      "Epoch:    6/10    Loss: 2.827418637275696\n",
       "\n",
-      "Epoch:    8/10    Loss: 2.4975639390945434\n",
+      "Epoch:    6/10    Loss: 2.8985392808914185\n",
       "\n",
-      "Epoch:    9/10    Loss: 2.1066411466014627\n",
+      "Epoch:    6/10    Loss: 2.9223783206939697\n",
       "\n",
-      "Epoch:    9/10    Loss: 1.8112431359291077\n",
+      "Epoch:    6/10    Loss: 3.023257360458374\n",
       "\n",
-      "Epoch:    9/10    Loss: 1.8590394353866577\n",
+      "Epoch:    6/10    Loss: 3.0632139587402345\n",
       "\n",
-      "Epoch:    9/10    Loss: 1.9739241099357605\n",
+      "Epoch:    6/10    Loss: 3.0682334518432617\n",
       "\n",
-      "Epoch:    9/10    Loss: 2.0903922390937804\n",
+      "Epoch:    6/10    Loss: 3.0650487327575684\n",
       "\n",
-      "Epoch:    9/10    Loss: 2.0872505044937135\n",
+      "Epoch:    6/10    Loss: 3.1606510305404663\n",
       "\n",
-      "Epoch:   10/10    Loss: 1.7852775515342245\n",
+      "Epoch:    7/10    Loss: 2.50212630815804\n",
       "\n",
-      "Epoch:   10/10    Loss: 1.492804594039917\n",
+      "Epoch:    7/10    Loss: 2.4344073867797853\n",
       "\n",
-      "Epoch:   10/10    Loss: 1.5862995791435242\n",
+      "Epoch:    7/10    Loss: 2.508746976852417\n",
       "\n",
-      "Epoch:   10/10    Loss: 1.6474875330924987\n",
+      "Epoch:    7/10    Loss: 2.5890588426589964\n",
       "\n",
-      "Epoch:   10/10    Loss: 1.68239892244339\n",
+      "Epoch:    7/10    Loss: 2.5926867532730102\n",
       "\n",
-      "Epoch:   10/10    Loss: 1.7401258873939514\n",
+      "Epoch:    7/10    Loss: 2.633247871398926\n",
+      "\n",
+      "Epoch:    7/10    Loss: 2.6934079265594484\n",
+      "\n",
+      "Epoch:    7/10    Loss: 2.6755907678604127\n",
+      "\n",
+      "Epoch:    7/10    Loss: 2.737115979194641\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.1841174494475126\n",
+      "\n",
+      "Epoch:    8/10    Loss: 1.9807016968727111\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.176537346839905\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.2056547498703\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.2167981553077696\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.2628628706932066\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.3348564386367796\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.3388330721855164\n",
+      "\n",
+      "Epoch:    8/10    Loss: 2.40253559589386\n",
+      "\n",
+      "Epoch:    9/10    Loss: 1.902281180024147\n",
+      "\n",
+      "Epoch:    9/10    Loss: 1.764658238887787\n",
+      "\n",
+      "Epoch:    9/10    Loss: 1.8164099144935608\n",
+      "\n",
+      "Epoch:    9/10    Loss: 1.8713159036636353\n",
+      "\n",
+      "Epoch:    9/10    Loss: 1.8814857578277588\n",
+      "\n",
+      "Epoch:    9/10    Loss: 1.933805170059204\n",
+      "\n",
+      "Epoch:    9/10    Loss: 2.0092004466056825\n",
+      "\n",
+      "Epoch:    9/10    Loss: 2.0829930543899535\n",
+      "\n",
+      "Epoch:    9/10    Loss: 2.0654377579689025\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.5841443873941898\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.4910853385925293\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.5754501056671142\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.6002404332160949\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.6103815674781798\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.7711012029647828\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.7712213921546935\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.770773584842682\n",
+      "\n",
+      "Epoch:   10/10    Loss: 1.8343065285682678\n",
       "\n",
       "Model Trained and Saved\n"
      ]
@@ -1043,7 +1103,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:** (Write answer, here)"
+    "**Answer:** (Write answer, here)\n",
+    "\n",
+    "[ACM] I first started with hyperparameters around the Sentiment RNN Exercise to\n",
+    "establish a baseline. I ran into several problems using these parameters, the most\n",
+    "important was that my model was not converging and hovering around a loss of ~9 units. As such I dove into the mentor questions help section and noticed that \n",
+    "several others were utilizing much smaller embedding dimensions and increasing the\n",
+    "hidden layer size. Moreover, I increased the batch size as well to encourage \n",
+    "training convergance. As a result, I was ablet to get the model to converge well into ~1.7 loss units. Though the output was not very sensible.\n",
+    "\n",
+    "Responding to the feedback from my first submission, I tried to increase the word embeddings and decrease the sequence length to see if I was able to get a better predictive output. In the end I was able to achieve a similar loss of 1.8 units. The generated script seems a tad better, though hard to say at this point."
    ]
   },
   {
@@ -1058,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1086,7 +1155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1180,50 +1249,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "jerry: your giant my car, i don't want you to call me.\n",
+      "jerry: work?\n",
       "\n",
-      "george: no, you're not reading.\n",
+      "elaine: well, i don't know what i'm going to take it!\n",
       "\n",
-      "jerry: oh, hi.\n",
+      "jerry: what?\n",
       "\n",
-      "george: well, i think i could use them on my leg.\n",
+      "george: i didn't see anything.(he slaps again)\n",
       "\n",
-      "jerry: oh, i got the front of this, but i used to get it back.\n",
+      "jerry: what?\n",
       "\n",
-      "kramer: yeah, i know. i know, i cant cant myself right now.\n",
+      "george: i can't believe you, i think i would say to tell you all what if you want? i want to be my back.\n",
       "\n",
-      "jerry: i don't know what that means, my hennie.\n",
+      "jerry: well, i gotta go down to the bathroom\"\"!\n",
       "\n",
-      "jerry: no. no. oh no no no. no no. no no no no no no no no no, you didn't have to go for the three hundred behind a pen.\n",
+      "george:\" the price-------------- it's- gotta home, you think i think i think i will be taking her about it.\n",
       "\n",
-      "elaine: hey, what happened?\n",
+      "george: i got a great name! that's an incredible. that's an incredible. that's my walkman.(leaves and elaine and runs down to the bathroom\" and then\" and it's while it's time, kramer.\n",
       "\n",
-      "jerry: i just dont get involved.\n",
+      "george:(grabbing the twix elaine) where are you?\n",
+      "\n",
+      "jerry: no...\n",
+      "\n",
+      "elaine:(o. c.) : oh, hello............\n",
+      "\n",
+      "george: oh, no, no, i'm gonna have to pay a big book down here.\n",
+      "\n",
+      "kramer: hey. hey, what are you doing this? i'm not going to have to pay her, please, please, go.\n",
+      "\n",
+      "kramer: jerry, you just want to talk to her about the little bakery.\n",
+      "\n",
+      "george: oh yes, yes, yes, i was gonna be in the house. sit down and join.\n",
+      "\n",
+      "jerry: well, we went out of my apartment.\n",
+      "\n",
+      "newman: what are you doing here? i got it.(he slaps up the phone) kramer, what do you think?\n",
+      "\n",
+      "jerry: i mean, it's just incomprehensible. it out.\n",
       "\n",
       "george: yeah.\n",
       "\n",
-      "jerry: so you're driving up.\n",
+      "kramer: well, i don't know how i'm going to take the next door.\n",
       "\n",
-      "george: it's not a bad--- a- a- a- a- a- a a- a- a- a- a- a- a- a- a- a- a ah- a- a- a a minute- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a- a ah a little too, yeah.\n",
+      "elaine:(on tv phone) hey, wait a minute, that i had to go to the bathroom too!\n",
       "\n",
-      "kramer: well, it doesn't the matter. i don't know, i think i don't.\n",
-      "\n",
-      "george:(thinking the door) yeah, that should be in a lot of you.\n",
-      "\n",
-      "george: oh no thank thank all thank very very........ you're not..........................\n",
-      "\n",
-      "jerry: hello?(pointing) ah..\n",
-      "\n",
-      "jerry: hello? oh how oh my god... well,(not stares)\n",
-      "\n",
-      "george: you know, i think\n"
+      "george:\n"
      ]
     }
    ],
@@ -1251,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
